cmake_minimum_required(VERSION 3.20)
project(untitled17)

set(CMAKE_CXX_STANDARD 11)

add_executable(untitled17 main.cpp FileReaderHelper.cpp FileReaderHelper.h LinkedList.cpp LinkedList.h Queue.cpp Queue.h Order.cpp Order.h Event.cpp Event.h ArrivalEvent.cpp ArrivalEvent.h CompletionEvent.cpp CompletionEvent.h Menu.cpp Menu.h Controller.cpp Controller.h Node.cpp Node.h PriorityQueue.cpp PriorityQueue.h EventList.cpp EventList.h OrderHandler.cpp OrderHandler.h OrderQueue.cpp OrderQueue.h OrderStack.cpp OrderStack.h Stack.cpp Stack.h Simulation.cpp Simulation.h)
